--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -7258,6 +7258,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the average annual demand for each region"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 102,
    "metadata": {},
    "outputs": [
