--- a/Labeling_Data.ipynb
+++ b/Labeling_Data.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Labeling Data with minimum features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -16,155 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>State</th>\n",
-       "      <th>County</th>\n",
-       "      <th>IXP_Count</th>\n",
-       "      <th>Regional Electricity Demand</th>\n",
-       "      <th>Utility Annual Energy Savings (MWh)</th>\n",
-       "      <th>SAIFI Major Events</th>\n",
-       "      <th>CAIDI w/o Major Events</th>\n",
-       "      <th>CAIDI w/ Major Events</th>\n",
-       "      <th>Commercial Generation Rank</th>\n",
-       "      <th>Total Generation Rank</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AK</td>\n",
-       "      <td>Anchorage Municipality County</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>High</td>\n",
-       "      <td>137.6</td>\n",
-       "      <td>138.8</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AK</td>\n",
-       "      <td>Kenai Peninsula County</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>High</td>\n",
-       "      <td>137.6</td>\n",
-       "      <td>138.8</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AK</td>\n",
-       "      <td>Kenai Peninsula Borough County</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>High</td>\n",
-       "      <td>137.6</td>\n",
-       "      <td>138.8</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AL</td>\n",
-       "      <td>Montgomery County</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>122.8</td>\n",
-       "      <td>186.9</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>High</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AL</td>\n",
-       "      <td>Lee County</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>122.8</td>\n",
-       "      <td>186.9</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>High</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  State                          County  IXP_Count  \\\n",
-       "0    AK   Anchorage Municipality County          1   \n",
-       "1    AK          Kenai Peninsula County          1   \n",
-       "2    AK  Kenai Peninsula Borough County          1   \n",
-       "3    AL               Montgomery County          2   \n",
-       "4    AL                      Lee County          2   \n",
-       "\n",
-       "  Regional Electricity Demand Utility Annual Energy Savings (MWh)  \\\n",
-       "0                    Moderate                             Unknown   \n",
-       "1                    Moderate                             Unknown   \n",
-       "2                    Moderate                             Unknown   \n",
-       "3                         Low                                 Low   \n",
-       "4                         Low                                 Low   \n",
-       "\n",
-       "  SAIFI Major Events  CAIDI w/o Major Events  CAIDI w/ Major Events  \\\n",
-       "0               High                   137.6                  138.8   \n",
-       "1               High                   137.6                  138.8   \n",
-       "2               High                   137.6                  138.8   \n",
-       "3           Moderate                   122.8                  186.9   \n",
-       "4           Moderate                   122.8                  186.9   \n",
-       "\n",
-       "  Commercial Generation Rank Total Generation Rank  \n",
-       "0                       High                   Low  \n",
-       "1                       High                   Low  \n",
-       "2                       High                   Low  \n",
-       "3                        Low                  High  \n",
-       "4                        Low                  High  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "min_features = pd.read_csv('/Users/sabrinasayed/Documents/GitHub/Data_Center_Sites/Data/Minimum_Features.csv', index_col=0)\n",
-    "min_features.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -192,154 +51,8 @@
     }
    ],
    "source": [
+    "min_features = pd.read_csv('/Users/sabrinasayed/Documents/GitHub/Data_Center_Sites/Cleaned Data/Minimum_Features.csv', index_col=0)\n",
     "min_features.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>State</th>\n",
-       "      <th>County</th>\n",
-       "      <th>IXP_Count</th>\n",
-       "      <th>Regional Electricity Demand</th>\n",
-       "      <th>Utility Annual Energy Savings (MWh)</th>\n",
-       "      <th>SAIFI Major Events</th>\n",
-       "      <th>CAIDI w/o Major Events</th>\n",
-       "      <th>CAIDI w/ Major Events</th>\n",
-       "      <th>Commercial Generation Rank</th>\n",
-       "      <th>Total Generation Rank</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AK</td>\n",
-       "      <td>Anchorage Municipality County</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>High</td>\n",
-       "      <td>137.6</td>\n",
-       "      <td>138.8</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AK</td>\n",
-       "      <td>Kenai Peninsula County</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>High</td>\n",
-       "      <td>137.6</td>\n",
-       "      <td>138.8</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AK</td>\n",
-       "      <td>Kenai Peninsula Borough County</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>High</td>\n",
-       "      <td>137.6</td>\n",
-       "      <td>138.8</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AL</td>\n",
-       "      <td>Montgomery County</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>122.8</td>\n",
-       "      <td>186.9</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>High</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AL</td>\n",
-       "      <td>Lee County</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>122.8</td>\n",
-       "      <td>186.9</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>High</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  State                          County  IXP_Count  \\\n",
-       "0    AK   Anchorage Municipality County          1   \n",
-       "1    AK          Kenai Peninsula County          1   \n",
-       "2    AK  Kenai Peninsula Borough County          1   \n",
-       "3    AL               Montgomery County          2   \n",
-       "4    AL                      Lee County          2   \n",
-       "\n",
-       "  Regional Electricity Demand Utility Annual Energy Savings (MWh)  \\\n",
-       "0                    Moderate                             Unknown   \n",
-       "1                    Moderate                             Unknown   \n",
-       "2                    Moderate                             Unknown   \n",
-       "3                         Low                                 Low   \n",
-       "4                         Low                                 Low   \n",
-       "\n",
-       "  SAIFI Major Events  CAIDI w/o Major Events  CAIDI w/ Major Events  \\\n",
-       "0               High                   137.6                  138.8   \n",
-       "1               High                   137.6                  138.8   \n",
-       "2               High                   137.6                  138.8   \n",
-       "3           Moderate                   122.8                  186.9   \n",
-       "4           Moderate                   122.8                  186.9   \n",
-       "\n",
-       "  Commercial Generation Rank Total Generation Rank  \n",
-       "0                       High                   Low  \n",
-       "1                       High                   Low  \n",
-       "2                       High                   Low  \n",
-       "3                        Low                  High  \n",
-       "4                        Low                  High  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "min_features.head()"
    ]
   },
   {
@@ -1113,13 +826,6 @@
     "data_centers= data_centers.sort_values(['State', 'Number_of_Data_Centers'], ascending=[True, False])\n",
     "\n",
     "data_centers.head(30)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Fill missing state level data"
    ]
   },
   {
